--- a/Version controll/Version controll/Version controll.csproj
+++ b/Version controll/Version controll/Version controll.csproj
@@ -57,6 +57,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GittesDev3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GittesDev3.Designer.cs">
+      <DependentUpon>GittesDev3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="cevata.resx">
@@ -64,6 +70,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GittesDev3.resx">
+      <DependentUpon>GittesDev3.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
